# teslamate-mcp

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  env.example  generate_token.py  main.py  main_remote.py  pull_log_20250814_181807.txt  pyproject.toml  test_server.py
data/: all_db_info.json
queries/: all_charging_sessions_summary.sql  average_efficiency_by_temperature.sql  basic_car_information.sql  battery_degradation_over_time.sql  battery_health_summary.sql  charging_by_location.sql  current_car_status.sql  daily_battery_usage.sql  daily_driving_patterns.sql  drive_summary_per_day.sql  efficiency_by_month_and_temperature.sql  longest_drives_by_distance.sql  monthly_driving_summary.sql  most_visited_locations.sql  software_update_history.sql  tire_pressure_weekly_trend.sql  total_distance_and_efficiency.sql  unusual_power_consumption.sql
src/: __init__.py  config.py  database.py  tools.py  validators.py
src/teslamate_mcp/: __init__.py  config.py  database.py  tools.py  validators.py
utils/: generate_token.py
